--- a/package.json
+++ b/package.json
@@ -55,27 +55,27 @@
         }
     ],
     "devDependencies": {
-        "@size-limit/preset-small-lib": "^9.0.0",
-        "@testing-library/react": "^14.0.0",
-        "@types/jest": "^29.5.5",
-        "@types/react": "^18.2.28",
-        "@types/react-dom": "^18.2.13",
-        "@typescript-eslint/eslint-plugin": "^6.8.0",
-        "@typescript-eslint/parser": "^6.8.0",
-        "eslint": "^8.51.0",
-        "eslint-config-airbnb": "^19.0.4",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-prettier": "^5.0.1",
-        "eslint-plugin-react-hooks": "^4.6.0",
-        "husky": "^8.0.3",
-        "jest": "^29.7.0",
-        "jest-environment-jsdom": "^29.7.0",
-        "prettier": "^3.0.3",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "size-limit": "^9.0.0",
-        "ts-jest": "^29.1.1",
-        "tslib": "^2.6.2",
-        "typescript": "^5.2.2"
+        "@size-limit/preset-small-lib": "11.1.4",
+        "@testing-library/react": "16.0.0",
+        "@types/jest": "29.5.12",
+        "@types/react": "18.3.3",
+        "@types/react-dom": "18.3.0",
+        "@typescript-eslint/eslint-plugin": "7.17.0",
+        "@typescript-eslint/parser": "7.17.0",
+        "eslint": "8.57.0",
+        "eslint-config-airbnb": "19.0.4",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-prettier": "5.2.1",
+        "eslint-plugin-react-hooks": "4.6.2",
+        "husky": "9.1.1",
+        "jest": "29.7.0",
+        "jest-environment-jsdom": "29.7.0",
+        "prettier": "3.3.3",
+        "react": "18.3.1",
+        "react-dom": "18.3.1",
+        "size-limit": "11.1.4",
+        "ts-jest": "29.2.3",
+        "tslib": "2.6.3",
+        "typescript": "5.5.4"
     }
 }
